# temppy

./: CMakeLists.txt  Makefile  README.md
examples/: basic_arithmetic.cpp  complex.cpp  control_flow.cpp  language_features.cpp  simple_demo.cpp  variables.cpp
include/temppy/: temppy.hpp
include/temppy/core/: char_traits.hpp  list.hpp  string.hpp  value.hpp
include/temppy/eval/: environment.hpp  eval.hpp
include/temppy/lexer/: lexer.hpp  token.hpp
include/temppy/parser/: ast.hpp  parser.hpp
tests/: test_control_flow.cpp  test_eval_features.cpp  test_lexer.cpp  test_string_literals.cpp
